--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "files.autoSave": "onFocusChange",
+    "files.autoSave": "off",
     "editor.wordWrap": "on",
     "terminal.integrated.fontSize": 10
 }
